--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hello World!</title>
 
-  </head>
-  <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
-    <script type="module" src="/src/renderer.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Game Time Sentry</title>
+
+</head>
+
+<body>
+  <div class="app"></div>
+  <script type="module" src="/src/renderer.js"></script>
+</body>
+
 </html>
